light-dark mode fixes

--- a/styles/class-modal.css
+++ b/styles/class-modal.css
@@ -75,8 +75,22 @@ body {
 }
 
 .course-tag,
-.crn-tag {
+.campus-tag {
   background: var(--clr-primary-a0);
+  color: #f5f5f5;
+  padding: 5px 10px;
+  border-radius: 5px;
+  font-size: 0.7rem;
+  font-weight: bold;
+  display: flex;
+  align-items: center;
+  gap: 5px;
+  white-space: nowrap;
+}
+
+.crn-tag,
+.section-tag {
+  background: var(--clr-surface-a50);
   color: #f5f5f5;
   padding: 5px 10px;
   border-radius: 5px;
@@ -867,6 +881,11 @@ body {
   }
 
   .close-btn:hover {
+    background: var(--clr-surface-a20);
+  }
+
+  .crn-tag,
+  .section-tag {
     background: var(--clr-surface-a20);
   }
 }
